# mcp-web-snapshot

./: ARTICLE.md  README.md  pyproject.toml  pytest.ini
src/: registry.py  server.py
src/tools/: snapshot_url.py
tests/: README.md  test_snapshot_url.py
